--- a/src/ApplicationUI/welcome.fxml
+++ b/src/ApplicationUI/welcome.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -18,11 +20,10 @@
                 </Label>
                 <Label layoutX="238.0" layoutY="80.0" text="Login or Register to continue" />
                 <Label layoutX="242.0" layoutY="125.0" text="Username" />
-                <Label layoutX="241.0" layoutY="170.0" text="Last Name" />
-                <Label layoutX="241.0" layoutY="217.0" text="Roll # " />
+                <Label layoutX="241.0" layoutY="170.0" text="Password" />
+                <Label layoutX="241.0" layoutY="217.0" />
             <TextField layoutX="241.0" layoutY="142.0" />
             <TextField layoutX="241.0" layoutY="187.0" />
-            <TextField layoutX="241.0" layoutY="234.0" />
             <Button layoutX="293.0" layoutY="277.0" mnemonicParsing="false" text="Login" />
             <Button layoutX="286.0" layoutY="330.0" mnemonicParsing="false" text="Register" />
             <Label layoutX="305.0" layoutY="302.0" text="or">
@@ -30,6 +31,12 @@
                   <Font name="Calibri Bold" size="24.0" />
                </font>
             </Label>
+            <MenuButton layoutX="256.0" layoutY="235.0" mnemonicParsing="false" text="Select User Role">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
             </children>
         </AnchorPane>
     </center>
