Added UI/Welcome+Register, BussinessLogic/user added images folder added button for changing scene

--- a/src/ApplicationUI/welcome.fxml
+++ b/src/ApplicationUI/welcome.fxml
@@ -5,38 +5,48 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.welcomeController">
     <center>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
-                <Label layoutX="241.0" layoutY="36.0" text="Welcome">
+                <Label layoutX="364.0" layoutY="79.0" text="Hello Again!">
                     <font>
-                        <Font name="Calibri Bold" size="38.0" />
+                        <Font name="Calibri Bold" size="36.0" />
                     </font>
                 </Label>
-                <Label layoutX="238.0" layoutY="80.0" text="Login or Register to continue" />
-                <Label layoutX="242.0" layoutY="125.0" text="Username" />
-                <Label layoutX="241.0" layoutY="170.0" text="Password" />
+                <Label layoutX="404.0" layoutY="120.0" text="Login to continue" />
                 <Label layoutX="241.0" layoutY="217.0" />
-            <TextField layoutX="241.0" layoutY="142.0" />
-            <TextField layoutX="241.0" layoutY="187.0" />
-            <Button layoutX="293.0" layoutY="277.0" mnemonicParsing="false" text="Login" />
-            <Button layoutX="286.0" layoutY="330.0" mnemonicParsing="false" text="Register" />
-            <Label layoutX="305.0" layoutY="302.0" text="or">
+            <TextField layoutX="379.0" layoutY="143.0" promptText="User Name" />
+            <TextField layoutX="379.0" layoutY="187.0" promptText="Password" />
+            <Button layoutX="428.0" layoutY="274.0" mnemonicParsing="false" text="Login" />
+            <Button layoutX="424.0" layoutY="345.0" mnemonicParsing="false" onAction="#goToRegister" text="Register" />
+            <Label layoutX="445.0" layoutY="310.0" text="or">
                <font>
                   <Font name="Calibri Bold" size="24.0" />
                </font>
             </Label>
-            <MenuButton layoutX="256.0" layoutY="235.0" mnemonicParsing="false" text="Select User Role">
+            <MenuButton layoutX="389.0" layoutY="235.0" mnemonicParsing="false" text="Select User Role">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="381.0" layoutY="-30.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Managei.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="286.0" fitWidth="286.0" layoutX="26.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/bouncy-security-with-fingerprint-verification.gif" />
+               </image>
+            </ImageView>
             </children>
         </AnchorPane>
     </center>
