--- a/src/ApplicationUI/teamDashboard.fxml
+++ b/src/ApplicationUI/teamDashboard.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.teamDashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.teamDashboardController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="800.0">
          <children>
@@ -55,28 +55,21 @@
                               </AnchorPane>
                             <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.4" prefWidth="579.2" styleClass="background" stylesheets="@application.css">
                                  <children>
-                                    <Button fx:id="teamTaskButton" layoutX="100.0" layoutY="220.0" mnemonicParsing="false" onAction="#viewTeamTasks" prefHeight="66.0" prefWidth="159.0" stylesheets="@application.css" text="View Team Tasks">
-                                       <styleClass>
-                                          <String fx:value="primaryButton" />
-                                          <String fx:value="font" />
-                                          <String fx:value="Button" />
-                                       </styleClass>
-                                    </Button>
-                                    <Button fx:id="viewOwnTasksButton" layoutX="323.0" layoutY="219.0" mnemonicParsing="false" onAction="#viewOwnTasks" prefHeight="66.0" prefWidth="154.0" stylesheets="@application.css" text="View Own Tasks">
+                                    <Button fx:id="viewOwnTasksButton" layoutX="323.0" layoutY="219.0" mnemonicParsing="false" onAction="#viewTeamTasks" prefHeight="66.0" prefWidth="154.0" stylesheets="@application.css" text="View Own Tasks">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
                                           <String fx:value="primaryButton" />
                                        </styleClass>
                                     </Button>
-                                    <Button fx:id="suggestNewTaskButton" layoutX="102.0" layoutY="319.0" mnemonicParsing="false" onAction="#suggestNewTask" prefHeight="66.0" prefWidth="159.0" stylesheets="@application.css" text="Suggest New Task">
+                                    <Button fx:id="suggestNewTaskButton" layoutX="99.0" layoutY="219.0" mnemonicParsing="false" onAction="#suggestNewTask" prefHeight="66.0" prefWidth="159.0" stylesheets="@application.css" text="Suggest New Task">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
                                           <String fx:value="primaryButton" />
                                        </styleClass>
                                     </Button>
-                                    <Button fx:id="completeTaskButton" layoutX="323.0" layoutY="319.0" mnemonicParsing="false" onAction="#completeTask" prefHeight="66.0" prefWidth="154.0" stylesheets="@application.css" text="Complete Task">
+                                    <Button fx:id="completeTaskButton" layoutX="216.0" layoutY="321.0" mnemonicParsing="false" onAction="#completeTask" prefHeight="66.0" prefWidth="154.0" stylesheets="@application.css" text="Complete Task">
                                        <styleClass>
                                           <String fx:value="Button" />
                                           <String fx:value="font" />
