--- a/src/ApplicationUI/completeTask.fxml
+++ b/src/ApplicationUI/completeTask.fxml
@@ -3,9 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,39 +16,20 @@
     <children>
         <AnchorPane prefHeight="600.0" prefWidth="800.0">
             <children>
-                <MenuBar layoutX="-8.0" layoutY="2.0" prefHeight="26.0" prefWidth="814.0">
-                    <menus>
-                        <Menu mnemonicParsing="false" text="File">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Edit">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Help">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-                <SplitPane dividerPositions="0.2760934393638171" layoutY="28.0" prefHeight="576.0" prefWidth="806.0">
+                <SplitPane dividerPositions="0.2760934393638171" prefHeight="605.0" prefWidth="806.0">
                     <items>
-                        <AnchorPane fx:id="leftBanner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.2" prefWidth="220.0" stylesheets="@application.css" SplitPane.resizableWithParent="false">
+                        <AnchorPane fx:id="leftBanner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="602.0" prefWidth="220.0" stylesheets="@application.css" SplitPane.resizableWithParent="false">
                             <styleClass>
                                 <String fx:value="background" />
                                 <String fx:value="teamDashboardBanner" />
                             </styleClass></AnchorPane>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" SplitPane.resizableWithParent="false">
                             <children>
-                                <SplitPane dividerPositions="0.16527777777777775" orientation="VERTICAL" prefHeight="577.0" prefWidth="579.0">
-                                    <items>
-                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="578.4" styleClass="background" stylesheets="@application.css" SplitPane.resizableWithParent="false">
+                        <AnchorPane>
+                           <children>
+                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="92.0" prefWidth="578.4" styleClass="background" stylesheets="@application.css">
                                             <children>
-                                                <Label layoutX="14.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="Member Task View" textAlignment="CENTER" textFill="WHITE">
+                                                <Label layoutX="20.0" layoutY="27.0" styleClass="font" stylesheets="@application.css" text="Member Task View" textAlignment="CENTER" textFill="WHITE">
                                                     <font>
                                                         <Font size="36.0" />
                                                     </font>
@@ -62,7 +41,7 @@
                                     </ImageView>
                                             </children>
                                         </AnchorPane>
-                                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.4" prefWidth="579.2" styleClass="background" stylesheets="@application.css">
+                                        <AnchorPane layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="579.0" styleClass="background" stylesheets="@application.css">
                                             <children>
                                     <TableView fx:id="taskViewTable" layoutX="22.0" layoutY="17.0" prefHeight="172.0" prefWidth="534.0" styleClass="tableView" stylesheets="@application.css">
                                       <columns>
@@ -78,10 +57,11 @@
                                           <String fx:value="font" />
                                        </styleClass>
                                     </Button>
+                                    <Separator layoutY="-1.0" prefHeight="0.0" prefWidth="578.0" />
                                             </children>
                                         </AnchorPane>
-                                    </items>
-                                </SplitPane>
+                           </children>
+                        </AnchorPane>
                             </children></AnchorPane>
                     </items>
                 </SplitPane>
