--- a/src/ApplicationUI/welcome.fxml
+++ b/src/ApplicationUI/welcome.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -11,27 +12,30 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.welcomeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@application.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.welcomeController">
     <center>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
-                <Label layoutX="364.0" layoutY="79.0" text="Hello Again!">
+                <Label layoutX="364.0" layoutY="79.0" stylesheets="@application.css" text="Hello Again!" textFill="WHITE">
                     <font>
                         <Font name="Calibri Bold" size="36.0" />
                     </font>
                 </Label>
-                <Label layoutX="404.0" layoutY="120.0" text="Login to continue" />
+                <Label layoutX="404.0" layoutY="120.0" text="Login to continue" textFill="WHITE" />
                 <Label layoutX="241.0" layoutY="217.0" />
             <TextField layoutX="379.0" layoutY="143.0" promptText="User Name" />
             <TextField layoutX="379.0" layoutY="187.0" promptText="Password" />
-            <Button layoutX="355.0" layoutY="280.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="200.0" text="Login" />
-            <Button layoutX="355.0" layoutY="343.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="30.0" prefWidth="200.0" text="Register" />
-            <Label layoutX="445.0" layoutY="310.0" text="or">
-               <font>
-                  <Font name="Calibri Bold" size="24.0" />
-               </font>
-            </Label>
-            <MenuButton layoutX="389.0" layoutY="235.0" mnemonicParsing="false" text="Select User Role">
+            <Button layoutX="355.0" layoutY="280.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="200.0" stylesheets="@application.css" text="Login">
+               <styleClass>
+                  <String fx:value="primaryButton" />
+                  <String fx:value="Button" />
+               </styleClass></Button>
+            <Button layoutX="355.0" layoutY="325.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="37.0" prefWidth="200.0" stylesheets="@application.css" text="Register">
+               <styleClass>
+                  <String fx:value="secondaryButton" />
+                  <String fx:value="Button" />
+               </styleClass></Button>
+            <MenuButton layoutX="389.0" layoutY="235.0" mnemonicParsing="false" stylesheets="@application.css" text="Select User Role">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
